[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/Bitmgothic/Bitmgothic.otf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/border.png" type="Texture" id=2]
[ext_resource path="res://scenes/AnimatedText.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/GUI.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[node name="GUI" type="CanvasLayer"]
pause_mode = 2
layer = 2
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLabel" type="Label" parent="TextureRect"]
margin_left = 10.0
margin_top = 31.75
margin_right = 18.0
margin_bottom = 45.75
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.333333, 0.333333, 1 )
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BorderMargin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 3 )
custom_constants/margin_right = 32
custom_constants/margin_top = 16
custom_constants/margin_left = 32
custom_constants/margin_bottom = 48
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PainColorRect" type="ColorRect" parent="BorderMargin"]
margin_left = 32.0
margin_top = 16.0
margin_right = 288.0
margin_bottom = 144.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackColorRect" type="ColorRect" parent="BorderMargin"]
visible = false
margin_left = 32.0
margin_top = 16.0
margin_right = 288.0
margin_bottom = 144.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRectTween" type="Tween" parent="BorderMargin"]

[node name="TextMargin" type="MarginContainer" parent="BorderMargin"]
margin_left = 32.0
margin_top = 16.0
margin_right = 288.0
margin_bottom = 144.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="AnimatedText" parent="BorderMargin/TextMargin" instance=ExtResource( 3 )]
